Fixed overlap issue on delete button.

--- a/sass/site.scss
+++ b/sass/site.scss
@@ -43,6 +43,7 @@ body {
 
 .form-group {
   position: relative;
+  z-index: 0;
 }
 
 
@@ -52,8 +53,11 @@ body {
   right: 0;
   width: 16px;
   height: 16px;
+  padding: 0;
+  margin: 0;
   background: url(../img/close.svg) 0 0 no-repeat;
   background-size: contain;
+  z-index: 100;
 }
 
 
